# TheoreticalInterpreter

./: .gitignore  CMakeLists.txt  main.c  main.h
Parser/: parser.c  parser.h
TESTS/: test1.txt
lexical/: lexicalanalyzer.c  lexicalanalyzer.h
